--- a/Home.css
+++ b/Home.css
@@ -32,7 +32,12 @@
   .u-section-1 .u-image-2 {
     margin-top: -341px;
     margin-right: -20px;
-    margin-bottom: 60px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: -360px;
+    margin-left: 72px;
   }
 }
 
@@ -44,14 +49,20 @@
   .u-section-1 .u-image-1 {
     width: 720px;
     height: 310px;
+    margin-top: 25px;
+    margin-right: -27px;
   }
 
   .u-section-1 .u-image-2 {
     width: 486px;
     height: 293px;
-    margin-top: -258px;
-    margin-right: -50px;
-    margin-bottom: 11px;
+    margin-top: -283px;
+    margin-right: -15px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: -302px;
+    margin-left: 52px;
   }
 }
 
@@ -63,18 +74,18 @@
   .u-section-1 .u-image-1 {
     width: 540px;
     height: 233px;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-2 {
     width: 362px;
     height: 218px;
-    margin-top: -181px;
+    margin-top: -206px;
     margin-right: -31px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: -360px;
-    margin-left: 159px;
+    margin-top: -232px;
   }
 }
 
@@ -92,12 +103,15 @@
   .u-section-1 .u-image-2 {
     width: 255px;
     height: 142px;
-    margin: -144px auto 43px 32px;
+    margin-top: -144px;
+    margin-right: 53px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: -227px;
-    margin-left: 100px;
+    font-size: 1.25rem;
+    margin-top: -20px;
+    margin-left: auto;
+    margin-bottom: 40px;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 534px;
