--- a/Documentation.css
+++ b/Documentation.css
@@ -34,7 +34,6 @@
 
 .u-section-1 .u-accordion-pane-1 {
   min-height: 487px;
-  height: auto;
   margin-right: 0;
   margin-left: 0;
 }
@@ -58,7 +57,6 @@
 
 .u-section-1 .u-accordion-pane-2 {
   min-height: 487px;
-  height: auto;
   margin-right: 0;
   margin-left: 0;
 }
@@ -76,7 +74,7 @@
 .u-section-1 .u-text-4 {
   font-family: Alata;
   font-size: 1.5rem;
-  margin: -16px 23px 0 8px;
+  margin: 0 -30px 0 -23px;
 }
 
 .u-section-1 .u-btn-1 {
@@ -104,7 +102,6 @@
 
 .u-section-1 .u-accordion-pane-3 {
   min-height: 487px;
-  height: auto;
   margin-right: 0;
   margin-left: 0;
 }
@@ -118,6 +115,14 @@
     font-weight: 400;
   }
 
+  .u-section-1 .u-accordion-pane-1 {
+    height: auto;
+  }
+
+  .u-section-1 .u-accordion-pane-2 {
+    height: auto;
+  }
+
   .u-section-1 .u-text-3 {
     margin-left: 0;
   }
@@ -125,6 +130,10 @@
   .u-section-1 .u-text-4 {
     margin-right: 0;
     margin-left: 0;
+  }
+
+  .u-section-1 .u-accordion-pane-3 {
+    height: auto;
   }
 }
 
